new apps, models

--- a/itproger/main/templates/main/about.html
+++ b/itproger/main/templates/main/about.html
@@ -4,8 +4,11 @@
 
 
 {% block content %}
-    <h1>Про нас</h1>
-    <p>Про нас</p>
+    <div class="features">
+        <h1>Про нас</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad at, debitis dolores expedita illum ipsa maiores pariatur quidem vero?</p>
+        <button class="btn btn-danger">Нажми!</button>
+    </div>
 {% endblock %}
 
 
