--- a/itproger/main/templates/main/index.html
+++ b/itproger/main/templates/main/index.html
@@ -1,11 +1,13 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}Главная страница{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 
 {% block content %}
-    <h1>Главная страница</h1>
-    <p>Главная страница</p>
+    <div class="features">
+        <h1>Главная страница</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ad at, debitis dolores expedita illum ipsa maiores pariatur quidem vero?</p>
+        <button class="btn btn-warning">На страницу про нас</button>
 
-
+    </div>
 {% endblock %}
