--- a/itproger/main/templates/main/layout.html
+++ b/itproger/main/templates/main/layout.html
@@ -21,6 +21,7 @@
             <a href="{% url 'about' %}"><li><i class="fa-solid fa-clipboard-question"></i>Про нас</li></a>
             <a href="{% url 'news_home' %}"><li><i class="fa-solid fa-newspaper"></i>Новости</li></a>
             <a href=""><li><i class="fa-solid fa-address-card"></i>Контакты</li></a>
+            <a href="{% url 'create' %}"><li><button class="btn btn-info"><i class="fa-solid fa-check"></i>Добавить запись</button></li></a>
         </ul>
     </aside>
     <main>
