--- a/itproger/main/templates/main/index.html
+++ b/itproger/main/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends 'main/layout.html' %}
 
-{% block title %}{{ title }}{% endblock %}
+{% block title %}Главная стриница{% endblock %}
 
 
 {% block content %}
